wp controller added
