# openapi.yaml
@@ -8,6 +8,31 @@ servers:
 security:
 - bearerAuth: []
 paths:
+  /api/warehouseproducts/{id}:
+    put:
+      tags:
+      - warehouse-products-controller
+      operationId: update
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/WarehouseProductsDto"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/WarehouseProductsDto"
   /api/warehouse/{id}:
     get:
       tags:
@@ -626,6 +651,46 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UserRsDto"
+  /api/warehouseproducts:
+    get:
+      tags:
+      - warehouse-products-controller
+      operationId: list
+      parameters:
+      - name: pageable
+        in: query
+        required: true
+        schema:
+          $ref: "#/components/schemas/Pageable"
+      - name: filter
+        in: query
+        required: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PageWarehouseProductsDto"
+    post:
+      tags:
+      - warehouse-products-controller
+      operationId: create
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/WarehouseProductsDto"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/WarehouseProductsDto"
   /api/warehouse:
     get:
       tags:
@@ -1037,6 +1102,10 @@ paths:
       responses:
         "200":
           description: OK
+          content:
+            application/json:
+              schema:
+                type: boolean
   /api/warehouse/count:
     get:
       tags:
@@ -1302,6 +1371,54 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/MedicalFacilityDto"
+  /api/map/warehouses.geojson:
+    get:
+      tags:
+      - map-controller
+      operationId: warehouses
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+  /api/map/noFlightZones.geojson:
+    get:
+      tags:
+      - map-controller
+      operationId: noZones
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+  /api/map/medicalFacility.geojson:
+    get:
+      tags:
+      - map-controller
+      operationId: medicalFacilitys
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+  /api/map/drones.geojson:
+    get:
+      tags:
+      - map-controller
+      operationId: drones
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
   /api/flighttask/count:
     get:
       tags:
@@ -1358,9 +1475,15 @@ paths:
                   $ref: "#/components/schemas/DroneDto"
 components:
   schemas:
+    ProductTypeDto:
+      type: object
+      properties:
+        type:
+          type: string
+        id:
+          type: integer
+          format: int64
     WarehouseDto:
-      required:
-      - products
       type: object
       properties:
         name:
@@ -1371,10 +1494,6 @@ components:
         locationLon:
           type: number
           format: double
-        products:
-          type: array
-          items:
-            $ref: "#/components/schemas/WarehouseProductsDto"
         id:
           type: integer
           format: int64
@@ -1390,6 +1509,10 @@ components:
         idWarehouseId:
           type: integer
           format: int64
+        product:
+          $ref: "#/components/schemas/ProductTypeDto"
+        warehouse:
+          $ref: "#/components/schemas/WarehouseDto"
         quantity:
           type: integer
           format: int32
@@ -1483,14 +1606,6 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/RequestEntryDto"
-        id:
-          type: integer
-          format: int64
-    ProductTypeDto:
-      type: object
-      properties:
-        type:
-          type: string
         id:
           type: integer
           format: int64
@@ -1659,7 +1774,7 @@ components:
           type: array
           items:
             type: string
-    PageWarehouseDto:
+    PageWarehouseProductsDto:
       type: object
       properties:
         totalPages:
@@ -1680,7 +1795,7 @@ components:
         content:
           type: array
           items:
-            $ref: "#/components/schemas/WarehouseDto"
+            $ref: "#/components/schemas/WarehouseProductsDto"
         number:
           type: integer
           format: int32
@@ -1716,6 +1831,38 @@ components:
           type: boolean
         unsorted:
           type: boolean
+        empty:
+          type: boolean
+    PageWarehouseDto:
+      type: object
+      properties:
+        totalPages:
+          type: integer
+          format: int32
+        totalElements:
+          type: integer
+          format: int64
+        pageable:
+          $ref: "#/components/schemas/PageableObject"
+        first:
+          type: boolean
+        last:
+          type: boolean
+        size:
+          type: integer
+          format: int32
+        content:
+          type: array
+          items:
+            $ref: "#/components/schemas/WarehouseDto"
+        number:
+          type: integer
+          format: int32
+        sort:
+          $ref: "#/components/schemas/SortObject"
+        numberOfElements:
+          type: integer
+          format: int32
         empty:
           type: boolean
     PageUserDto:
