# src/main/kotlin/ru/bardinpetr/itmo/meddelivery/app/dto/WarehouseProductsDto.kt
@@ -1,6 +1,12 @@
-package ru.bardinpetr.itmo.meddelivery.app.dto
+ package ru.bardinpetr.itmo.meddelivery.app.dto
 
-/**
+ /**
  * DTO for {@link ru.bardinpetr.itmo.meddelivery.app.entities.WarehouseProducts}
  */
-data class WarehouseProductsDto(val idProductId: Long = 0, val idWarehouseId: Long = 0, val quantity: Int?)
+data class WarehouseProductsDto(
+     val idProductId: Long = 0,
+     val idWarehouseId: Long = 0,
+     val product: ProductTypeDto?,
+     val warehouse: WarehouseDto?,
+     val quantity: Int?
+ )
